SPOTBCHAIN-30 уведомлять в телеграм если баланс хотволета или FEE волета ниже заданного порога

--- a/Backoffice/Components/BitGo/Assets/BitGoAssetDetailsDialog.razor
+++ b/Backoffice/Components/BitGo/Assets/BitGoAssetDetailsDialog.razor
@@ -11,6 +11,7 @@
                 <tr><td>BitGo wallet</td><td class="float-left">@Item.BitgoWalletId</td></tr>
                 <tr><td>Enabled BitGo wallets</td><td class="float-left">@Item.EnabledBitgoWalletIds</td></tr>
                 <tr><td>BitGo coin</td><td class="float-left">@Item.BitgoCoin</td></tr>
+                <tr><td>Min balance</td><td class="float-left">@Item.BitgoCoin</td></tr>
             </table>
         </td>
     </tr>
