--- a/Backoffice/Pages/Monitor.razor
+++ b/Backoffice/Pages/Monitor.razor
@@ -26,7 +26,7 @@
 
 
 @code {
-    private Menus ActivePage { get; set; } = Menus.Trades;
+    private Menus ActivePage { get; set; } = Menus.WalletObserver;
     private string CheckActive(Menus target)
     {
         if (ActivePage == target)
