--- a/Backoffice/Components/Prices/BasePriceEditDialog.razor
+++ b/Backoffice/Components/Prices/BasePriceEditDialog.razor
@@ -7,7 +7,7 @@
                       NoButtonCaption="Cancel"
                       OnSubmit="OnSubmit">
     
-    <h4>Asset: @BasePrice.InstrumentId</h4>
+    <h4>Asset: @BasePrice.AssetId</h4>
     <h4>Broker: @BasePrice.BrokerId</h4>
 
     <div>
