--- a/Backoffice/Components/Prices/BasePriceComponent.razor
+++ b/Backoffice/Components/Prices/BasePriceComponent.razor
@@ -26,7 +26,7 @@
         rowNumber++;
         <tr>
             <td>@rowNumber</td>
-            <td>@price.InstrumentId</td>
+            <td>@price.AssetId</td>
             <td>@price.CurrentPrice</td>
             <td>@price.H24P</td>
             <td>@price.H24A</td>
@@ -65,7 +65,7 @@
     {
         BasePrice = new BasePriceEditRequest()
         {
-            InstrumentId = basePrice.InstrumentId,
+            AssetId = basePrice.AssetId,
             BrokerId = basePrice.BrokerId,
             CurrentPrice = basePrice.CurrentPrice,
             D7 = basePrice.D7,
