--- a/Backoffice/Components/Notifications/Templates/NotificationTemplatesComponent.razor
+++ b/Backoffice/Components/Notifications/Templates/NotificationTemplatesComponent.razor
@@ -138,7 +138,7 @@
 
     private async Task RefreshTemplates()
     {
-        _templates = (await _templateService.GetAllTemplates()).Templates;
+        _templates = (await _templateService.GetAllTemplates()).Templates ?? new List<NotificationTemplate>();
         StateHasChanged();
     }
 
